<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mitchell.lifepointcounter.CountersActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_counters" />

    <Button
        android:id="@+id/points"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/title_points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dice"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dice"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/title_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/counters"
        app:layout_constraintStart_toEndOf="@+id/points" />

    <Button
        android:id="@+id/counters"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/title_counters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dice" />



</android.support.constraint.ConstraintLayout>
